Adding teen-smart

--- a/secure.html
+++ b/secure.html
@@ -87,7 +87,7 @@
 				<div class="first prod-card one-third column">
 					<img class="prod-image attr" data-fsc-item-path="bronze" data-fsc-item-image></img>
 					<span class="attr bronze display" data-fsc-item-path="bronze" data-fsc-item-display></span>
-					<span class="attr pricing" data-fsc-item-path="bronze" data-fsc-item-price></span>
+					<span class="attr pricing" data-fsc-item-path="bronze" data-fsc-item-unitPrice></span>
 
 					<input type="radio" id="bronze" name="secureProduct" value="bronze" checked>
 				</div>
@@ -95,7 +95,7 @@
 				<div class="prod-card one-third column">
 					<img class="attr prod-image" data-fsc-item-path="silver" data-fsc-item-image></img>
 					<span class="attr silver display" data-fsc-item-path="silver" data-fsc-item-display></span>
-					<span class="attr pricing" data-fsc-item-path="silver" data-fsc-item-price></span>
+					<span class="attr pricing" data-fsc-item-path="silver" data-fsc-item-unitPrice></span>
 					
 					<input type="radio" id="silver" name="secureProduct" value="silver">
 				</div>
@@ -103,7 +103,7 @@
 				<div class="prod-card one-third column">
 					<img class="attr prod-image" data-fsc-item-path="gold" data-fsc-item-image></img>
 					<span class="attr gold display" data-fsc-item-path="gold" data-fsc-item-display></span>
-					<span class="attr pricing" data-fsc-item-path="gold" data-fsc-item-price></span>
+					<span class="attr pricing" data-fsc-item-path="gold" data-fsc-item-unitPrice></span>
 					
 					<input type="radio" id="gold" name="secureProduct" value="gold">
 				</div>
@@ -130,7 +130,7 @@
 				<div class="row">
 					<div class="twelve columns">
 						<ul style="list-style-type:none !important;">
-							<li><h6>* Please only click the button once. This is a demo an not based for performance, so it will take approx 10 seconds.</h6></li>
+							<li><h6>* Please only click the button once. This is a demo and not based for performance, so it will take approx 10 seconds.</h6></li>
 							<li><h6>* Please reload pages between attempts</h6></li>
 						</ul>
 				    </div>
